1. made sure that 'en' is the default language on new users.
2. issue error message if shutdown is attempted by a low privileged user.
3. Make sure a privilege is defined for all users (even if it is 0).
4. Try to fix some more dups (and the time on them).
5. make the time stored on dups generated locally on spots an integer no of 
minutes * 60 
26Jul00=======================================================================
1. added wantgrid (to control display of grid square info on DX Broadcasts)
2. added lastoper for controlling periodic demands for user info from other
nodes.
3. added spiderFAQ stuff from Ian G0VGS and latest update of the admin manual
4. changed updating and deleting from user file in an attempt to keep down
duplicates and possibly corruptions.
5. added a DXUser::export routine to allow the cluster to automatically 
export the user data in ascii from cron.
6. added a line in the ISSUED crontab to do the export once a week
7. delete annok and dxok if set to 1 in user records.
8. added export_users command to allow arbitary exporting of user files
9. added set and unset/dxgrid command to allow control over the grid squares 
on DX announcements
10. Removed export_user.pl (no longer needed)
11. made import_users.pl accept a non related input filename and always
update the current user file.
12. added an 'auto rcmd <node> for/oper <call>' for people I can see on the
cluster that issue spots and for whom I have no qra info (no more than once
a month). This isn't the default - set $send_opernam in
/spider/local/DXProtVars.pm (copied from /spider/perl). Good for gateways.
13. Despace spot texts properly again for deduping purposes.
14. Corrected Pc84/85 handling a bit.
15. Sync the user database every 15 secs to see whether we can reduce the 
corruptions and duplicates.
25Jul00=======================================================================
1. ignore \n in ax25 mode for C client.