@@ -5,6 +5,7 @@
 4. Try to fix some more dups (and the time on them).
 5. make the time stored on dups generated locally on spots an integer no of 
 minutes * 60 
+6. send unsolicited PC[38]5s to the sysop if online.
 26Jul00=======================================================================
 1. added wantgrid (to control display of grid square info on DX Broadcasts)
 2. added lastoper for controlling periodic demands for user info from other
